hover effect on projects images

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <article class="project-container alternate">
                     <div class="text">
                         <h3 class="project-title">Title of the project</h3>
-                        <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio quod provident eligendi architecto nihil, ipsum doloremque aut consequatur veniam unde temporibus saepe atque quo, porro, velit excepturi minus blanditiis id fuga voluptate tempora. Placeat laudantium quaerat et accusamus sed dolorum fugiat quas corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt eveniet facilis ea ut libero iure cum corrupti excepturi maxime nam quae dolorem, id officiis fugit, laborum consequatur quisquam vel sapiente expedita.</p>
+                        <p class="description">Lore quo, porro, velit excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt eveniet facilis ea ut libero iure cum corrupti excepturi maxime nam quae dolorem, id officiis fugit, laborum consequatur quisquam vel sapiente expedita.</p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
