--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="" href="">
+    <link rel="icon" href="images/logo.png">
     <title>Anca Matei - Portfolio site</title>
 </head>
 <body>
