--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="" href="">
     <link rel="icon" href="images/logo.png">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Anca Matei - Portfolio site</title>
 </head>
 <body>
@@ -20,7 +19,7 @@
                         <li><a href=#projects >Projects</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><button>Resume</button></li>
+                        <li><a class="button" href="images/Anca Matei  Resume.pdf" target="_blank">Resume</a></li>
                     </ul>
                 </nav>
             </div>
