--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                I am eager to collaborate on projects as an integral part of a team. 
             </p>
             <p>
-                In my spare time, I enjoy spending quality time with friends, celebrating the bonds that enrich my life, trying new cuisines at local restaurant (I am a foodie at heart), reading nonfiction books and nurturing my growing plant collection. 
+                In my spare time, I enjoy spending quality time with friends, celebrating the bonds that enrich my life, trying new cuisines at local restaurants (I am a foodie at heart), reading nonfiction books and nurturing my growing plant collection. 
             </p>
 
             
@@ -74,7 +74,9 @@
                 <article class="project-container alternate">
                     <div class="text">
                         <h3 class="project-title">Euro Tour Car Rental</h3>
-                        <p class="description">This project aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. The website is designed to showcase the available car fleet, allow users to check specifications, view rental prices based on time intervals, and submit rental requests. The website is available in both Romanian and English to cater to a broader audience.</p>
+                        <p class="description">This project aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. The website is designed to showcase the available car fleet, allow users to check specifications, view rental prices based on time intervals, and submit rental requests.
+                            Google Translate is incorporated into the website for multilingual support, in order to cater to a broader audience.
+                        <br>The website is currently in the process of migrating to the Angular framework for improved performance and maintainability.</p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
@@ -97,7 +99,7 @@
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
-                            <span><img src="images/javascript.svg" alt="JavaScript icon"> JavaScript</span> 
+                            <span><img src="images/typescript.svg" alt="Typescript icon">Typescript</span> 
                             <span><img src="images/angularjs-fill.svg" alt="Angular icon">Angular</span> 
                         </div>
                     </div>
@@ -109,7 +111,7 @@
                         </div>
                     </div>
                 </article>
-                <article class="project-container alternate">
+                <!-- <article class="project-container alternate">
                     <div class="text">
                         <h3 class="project-title">Title of the project</h3>
                         <p class="description">Lore quo, porro, velit excepturi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt eveniet facilis ea ut libero iure cum corrupti excepturi maxime nam quae dolorem, id officiis fugit, laborum consequatur quisquam vel sapiente expedita.</p>
@@ -128,7 +130,7 @@
                             <a class="external-link" href="#" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="currentColor" viewBox="0 0 512 512"><path d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>  </a>
                         </div>
                     </div>
-                </article>
+                </article> -->
             </div>
         </div>
     </section>
