--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <section class="about" id="about">
         <div class="container">
             <h2>About me</h2>
-            <p>I am a JavaScript developer specializing in the Angular frontend framework, with a focus on responsive design and accessibility.
-               My unique background in medicine has instilled in me a strong sense of discipline, promoting continuous skill development and adaptability to diverse working environments and team dynamics, traits that I bring into my work as a developer.     
+            <p>I am a JavaScript developer specializing in the Angular frontend framework, with a focus on responsive design.</p>
+            <p>My unique background in medicine has instilled in me a strong sense of discipline, promoting continuous skill development and adaptability to diverse working environments and team dynamics, traits that I bring into my work as a developer.     
                I am eager to collaborate on projects as an integral part of a team. 
             </p>
             <p>
@@ -53,23 +53,25 @@
         <div class="container">  
             <h2>Some of my projects</h2>
             <div class="projects-container">
-                <article class="project-container ">
+                <article class="project-container">
                     <div class="text">
-                        <h3 class="project-title">Euro Tour Car Rental</h3>
+                        <h3 class="project-title">EuroTour Website</h3>
                         <p class="description">This project aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. The website is designed to showcase the available car fleet, allow users to check specifications, view rental prices based on time intervals, and submit rental requests.
                             Google Translate is incorporated into the website for multilingual support, in order to cater to a broader audience.
-                        <br>The website is currently in the process of migrating to the Angular framework for improved performance and maintainability.</p>
+                        </p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
-                            <span><img src="images/javascript.svg" alt="JavaScript icon"> JavaScript</span> 
+                            <span><img src="images/typescript.svg" alt="Typescript icon">Typescript</span> 
+                            <span><img src="images/angularjs-fill.svg" alt="Angular icon">Angular</span> 
+                            <span>Contentful</span>
                         </div>
                     </div>
                     <div class="photo">
-                        <img src="images/car-rental.png" alt="printscreen of the Euro Tour Car Rental project" >
+                        <img src="images/eurotour.png" alt="EuroTour website screenshot" >
                         <div class="project-links">
-                            <a class="github" href="https://github.com/Anca2022/Car-rental-euro-tour/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"></path></svg></a>
-                            <a class="external-link" href="https://resilient-choux-32abd2.netlify.app/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="currentColor" viewBox="0 0 512 512"><path d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>  </a>
+                            <a class="github" href="https://github.com/Anca2022/Eurotour-car-rental-angular" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"></path></svg></a>
+                            <a class="external-link" href="https://eurotour-car-rental.netlify.app/home" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="currentColor" viewBox="0 0 512 512"><path d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>  </a>
                         </div>
                     </div>
                 </article>
@@ -91,10 +93,10 @@
                         </div>
                     </div>
                 </article>
-                <article class="project-container">
+                <article class="project-container ">
                     <div class="text">
                         <h3 class="project-title">Food Mine Youtube</h3>
-                        <p class="description">This project was created following a tutorial on YouTube as a means to practice the Angular framework. The goal of the project is to implement a simple restaurant page where users can add various food items to their cart. This project was generated with Angular CLI version 17.0.3.</p>
+                        <p class="description">This project was created following a tutorial on YouTube as a means to practice the Angular framework. The goal of the project is to implement a simple restaurant page where users can add various food items to their cart. </p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
@@ -107,6 +109,25 @@
                         <div class="project-links">
                             <a class="github" href="https://github.com/Anca2022/FoodMineYoutube" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"></path></svg></a>
                             <a class="external-link" href="https://regal-rugelach-42bd5e.netlify.app" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>  </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="project-container alternate">
+                    <div class="text">
+                        <h3 class="project-title">Euro Tour Car Rental</h3>
+                        <p class="description">The initial Eurotour Car Rental project was developed using Vanilla Javascript. To enhance performance and ease of maintenance, the website underwent migration to the Angular framework. Additionally, there is no backend currently accessible for the website.
+                        </p>
+                        <div class="technologies">
+                            <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
+                            <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
+                            <span><img src="images/javascript.svg" alt="JavaScript icon"> JavaScript</span> 
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/car-rental.png" alt="printscreen of the Euro Tour Car Rental project" >
+                        <div class="project-links">
+                            <a class="github" href="https://github.com/Anca2022/Car-rental-euro-tour/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"></path></svg></a>
+                            <a class="external-link" href="https://resilient-choux-32abd2.netlify.app/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="currentColor" viewBox="0 0 512 512"><path d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"/></svg>  </a>
                         </div>
                     </div>
                 </article>
