--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <div class="container">
             <h2>About me</h2>
             <p>I am a JavaScript developer specializing in the Angular framework, with a focus on responsive design.</p>
-            <p>My unique background in medicine has instilled in me a strong sense of discipline, promoting continuous skill development and adaptability to diverse working environments and team dynamics, traits that I bring into my work as a developer.     
-               I am eager to collaborate on projects as an integral part of a team. 
+            <p>My distinctive background in medicine has instilled in me a strong sense of discipline, fostering continuous skill development and adaptability to diverse working environments and team dynamics, traits that I bring into my work as a developer.     
+               I am eager to collaborate on projects as a team member. 
             </p>
             <p>
-                In my spare time, I enjoy spending quality time with friends, celebrating the bonds that enrich my life, trying new cuisines at local restaurants (I am a foodie at heart), reading nonfiction books and nurturing my growing plant collection. 
+                In my spare time, I enjoy spending quality time with my friends, trying new cuisines at local restaurants (I am a foodie at heart), reading nonfiction books and nurturing my growing plant collection. 
             </p>
 
             
@@ -55,8 +55,8 @@
                 <article class="project-container">
                     <div class="text">
                         <h3 class="project-title">EuroTour Website</h3>
-                        <p class="description">This project aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. The webpage is built in Angular (version 17.0.3) and 
-                            Google Translate is incorporated for multilingual support. The website integrates Contentful CMS for backend management alongside EmailJS for transmitting form data to email addresses.
+                        <p class="description">This project aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. The webpage is built in Angular (version 17.0.3) and it integrates Contentful CMS for backend management alongside EmailJS for transmitting the reservation data to the admin's email address. 
+                            The website incorporates Google Translate for multilingual support. 
                         </p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
@@ -76,7 +76,7 @@
                 <article class="project-container alternate">
                     <div class="text">
                         <h3 class="project-title">Kindergarden website</h3>
-                        <p class="description">This task serves as a hands-on learning experience for practicing CSS skills by creating a website for a fictional kindergarten. The design is based on a free CSS template. The project focuses on style and does not take into account the webpage's responsiveness.</p>
+                        <p class="description">This task serves as a hands-on learning experience for practicing CSS skills by creating a website for a fictional kindergarten. The design is based on a free CSS template. The website is optimized for desktop use only.                        </p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
@@ -112,8 +112,8 @@
                 </article>
                 <article class="project-container alternate">
                     <div class="text">
-                        <h3 class="project-title">Euro Tour Car Rental</h3>
-                        <p class="description">The initial Eurotour Car Rental project was developed using Vanilla Javascript. To enhance performance and ease of maintenance, the website underwent migration to the Angular framework. Additionally, there is no backend currently accessible for the website.
+                        <h3 class="project-title">EuroTour Car Rental</h3>
+                        <p class="description">The initial EuroTour project was developed using Vanilla Javascript, serving as an exercise in building a complete, functional website from the ground up. To enhance performance and ease of maintenance, the website underwent migration to the Angular framework. 
                         </p>
                         <div class="technologies">
                             <span><img src="images/html5.svg" alt="HTML5 icon">HTML5</span> 
@@ -156,7 +156,8 @@
     <section class="contact" id="contact">
         <div class="container">
             <h2>Get in touch</h2>
-            <p>I'm currently specializing in <em>Front-End Development</em>. Feel free to get in touch and talk more about your projects.</p>
+            <p>I am eager to collaborate on exciting projects. Whether you have a specific project in mind or just want to say hello, I'd love to hear from you!
+            </p>
             <ul>
                 <li><a href="https://github.com/Anca2022/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12.001 2C6.47598 2 2.00098 6.475 2.00098 12C2.00098 16.425 4.86348 20.1625 8.83848 21.4875C9.33848 21.575 9.52598 21.275 9.52598 21.0125C9.52598 20.775 9.51348 19.9875 9.51348 19.15C7.00098 19.6125 6.35098 18.5375 6.15098 17.975C6.03848 17.6875 5.55098 16.8 5.12598 16.5625C4.77598 16.375 4.27598 15.9125 5.11348 15.9C5.90098 15.8875 6.46348 16.625 6.65098 16.925C7.55098 18.4375 8.98848 18.0125 9.56348 17.75C9.65098 17.1 9.91348 16.6625 10.201 16.4125C7.97598 16.1625 5.65098 15.3 5.65098 11.475C5.65098 10.3875 6.03848 9.4875 6.67598 8.7875C6.57598 8.5375 6.22598 7.5125 6.77598 6.1375C6.77598 6.1375 7.61348 5.875 9.52598 7.1625C10.326 6.9375 11.176 6.825 12.026 6.825C12.876 6.825 13.726 6.9375 14.526 7.1625C16.4385 5.8625 17.276 6.1375 17.276 6.1375C17.826 7.5125 17.476 8.5375 17.376 8.7875C18.0135 9.4875 18.401 10.375 18.401 11.475C18.401 15.3125 16.0635 16.1625 13.8385 16.4125C14.201 16.725 14.5135 17.325 14.5135 18.2625C14.5135 19.6 14.501 20.675 14.501 21.0125C14.501 21.275 14.6885 21.5875 15.1885 21.4875C19.259 20.1133 21.9999 16.2963 22.001 12C22.001 6.475 17.526 2 12.001 2Z"></path></svg></a></li>
                 <li><a href="https://www.linkedin.com/in/anca-m-matei/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.3362 18.339H15.6707V14.1622C15.6707 13.1662 15.6505 11.8845 14.2817 11.8845C12.892 11.8845 12.6797 12.9683 12.6797 14.0887V18.339H10.0142V9.75H12.5747V10.9207H12.6092C12.967 10.2457 13.837 9.53325 15.1367 9.53325C17.8375 9.53325 18.337 11.3108 18.337 13.6245V18.339H18.3362ZM7.00373 8.57475C6.14573 8.57475 5.45648 7.88025 5.45648 7.026C5.45648 6.1725 6.14648 5.47875 7.00373 5.47875C7.85873 5.47875 8.55173 6.1725 8.55173 7.026C8.55173 7.88025 7.85798 8.57475 7.00373 8.57475ZM8.34023 18.339H5.66723V9.75H8.34023V18.339ZM19.6697 3H4.32923C3.59498 3 3.00098 3.5805 3.00098 4.29675V19.7033C3.00098 20.4202 3.59498 21 4.32923 21H19.6675C20.401 21 21.001 20.4202 21.001 19.7033V4.29675C21.001 3.5805 20.401 3 19.6675 3H19.6697Z"></path></svg></a></li>
