--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
             <p>
                 In my spare time, I enjoy spending quality time with my friends, trying new cuisines at local restaurants (I am a foodie at heart), reading nonfiction books and nurturing my growing plant collection. 
             </p>
-
-            
         </div>
     </section>
 
@@ -54,8 +52,8 @@
             <div class="projects-container">
                 <article class="project-container">
                     <div class="text">
-                        <h3 class="project-title">EuroTour Website</h3>
-                        <p class="description">This project aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. The webpage is built in Angular (version 17.0.3) and it integrates Contentful CMS for backend management alongside EmailJS for transmitting the reservation data to the admin's email address. 
+                        <h3 class="project-title">EuroTour - Angular version</h3>
+                        <p class="description">This webpage is a real life project that aims to provide a user-friendly platform for a car rental firm based in Cluj-Napoca. It is built in Angular (version 17.0.3) and it integrates Contentful CMS for backend management alongside EmailJS for transmitting the reservation data to the admin's email address. 
                             The website incorporates Google Translate for multilingual support. 
                         </p>
                         <div class="technologies">
@@ -63,6 +61,7 @@
                             <span><img src="images/css3.svg" alt="CSS icon">CSS</span> 
                             <span><img src="images/typescript.svg" alt="Typescript icon">Typescript</span> 
                             <span><img src="images/angularjs-fill.svg" alt="Angular icon">Angular</span> 
+                            <span><img src="images/reactivex.svg" alt="RxJS icon">RxJS</span> 
                         </div>
                     </div>
                     <div class="photo">
