add link tag for web monetization

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Welcome to my personal portfolio website! This project showcases my skills, projects, and experiences in a web-based format. The website serves as a digital representation of my professional profile and accomplishments.">
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="monetization" href="https://ilp.interledger-test.dev/fba6a82b" />
     <title>Anca Matei - Portfolio website</title>
 </head>
 <body>
