--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Welcome to my personal portfolio website! This project showcases my skills, projects, and experiences in a web-based format. The website serves as a digital representation of my professional profile and accomplishments.">
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="monetization" href="https://ilp.interledger-test.dev/d2825286" />
+    <link rel="monetization" href="https://interledgtest.d/d28=25286kdnas%20%kndab%20/fa" />
     <title>Anca Matei - Portfolio website</title>
 </head>
 <body>
