--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Welcome to my personal portfolio website! This project showcases my skills, projects, and experiences in a web-based format. The website serves as a digital representation of my professional profile and accomplishments.">
     <link rel="icon" href="images/logo.png">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="monetization" href="https://interledgtest.d/d28=25286kdnas%20%kndab%20/fa" />
+    <script id="wmt-init-script" type="module" src="https://cdn.webmonetization.org/init.js?wa=ilp.interledger-test.dev/fba6a82b&tag=version1&types=banner"></script>
     <title>Anca Matei - Portfolio website</title>
 </head>
 <body>
