test banner script

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
         <div class="container">
             <small>© 2024 Anca Matei.</small>
         </div>
-        
     </footer>
+    <script id="wmt-init-script" type="module" src="https://cdn.webmonetization.org/init.js?wa=ilp.interledger-test.dev/anca-m&tag=version2&types=banner"></script>
     <script src="main.js"></script>
 </body>
 </html>
